--- a/input/scss/style.scss
+++ b/input/scss/style.scss
@@ -2,7 +2,7 @@
 // @import "normalize";
 // @import "rouge-github";
 @import "variables";
-// @import "blog";
+@import "blog";
 
 @mixin large {
   @media screen and (min-width: #{$large-breakpoint}) {
