--- a/input/post.cshtml
+++ b/input/post.cshtml
@@ -6,32 +6,32 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#157878">
     <title>@title</title>
     <link href="@Context.GetLink("/scss/style.css")" rel="stylesheet">
-  </head>
+</head>
 
-  <body>
+<body>
 
     <!-- Site Header -->
-    @RenderSectionOrPartial("Header", "_header")
+    @RenderSectionOrPartial("Header", "_postHeader")
 
     <section class="page-header" style="padding-top: 80px; padding-bottom: 40px; background: linear-gradient(0deg,rgba(0,0,0,0.2),rgba(0,0,0,0.0)), url('/assets/img/home-header.jpg') center center repeat;">
-      <h1 class="project-name">@title</h1>
-      <h2 class="project-tagline">@tagline</h2>
-      <a href="" class="btn">No Source Code</a>
+        <h1 class="project-name">@title</h1>
+        <h2 class="project-tagline">@tagline</h2>
+        <a href="" class="btn">No Source Code</a>
     </section>
 
     <section class="main-content">
-      @RenderBody()
+        @RenderBody()
 
-      <!-- Site Header -->
-      @RenderSectionOrPartial("Footer", "_footer")
+        <!-- Site Header -->
+        @RenderSectionOrPartial("Footer", "_footer")
     </section>
-  </body>
+</body>
 
 </html>
