Del：移除冗余信息

--- a/input/_header.cshtml
+++ b/input/_header.cshtml
@@ -25,12 +25,12 @@
             </span>
         </label>
 
-        <div class="trigger">
+        <!-- <div class="trigger">
             @foreach (var link in exLinks)
             {
                 <a class="page-link" href='@link["Link"]'>@link["Title"]</a>
             }
-        </div>
+        </div> -->
     </nav>
     </div>
 </header>
