--- a/input/post.cshtml
+++ b/input/post.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    var title = @Document.GetString("Title") ?? @Document.GetString("SiteTitle");
-    var tagline = @Document.GetString("TagLine") ?? @Document.GetString("SiteTagLine");
+    var title = Document.GetString("Title") ?? Document.GetString("SiteTitle");
+    var tags = Document.GetList<string>("Tag");
 }
 
 <!DOCTYPE html>
@@ -22,8 +22,10 @@
 
     <section class="page-header" style="padding-top: 80px; padding-bottom: 40px; background: linear-gradient(0deg,rgba(0,0,0,0.2),rgba(0,0,0,0.0)), url('/assets/img/home-header.jpg') center center repeat;">
         <h1 class="project-name">@title</h1>
-        <h2 class="project-tagline">@tagline</h2>
-        <a href="" class="btn">No Source Code</a>
+        @foreach (var tag in tags?.Where(x => x != null))
+        {
+            <a>@tag</a>
+        }
     </section>
 
     <section class="main-content">
