--- a/input/post.cshtml
+++ b/input/post.cshtml
@@ -1,4 +1,4 @@
-@{
+﻿@{
     var title = Document.GetString("Title") ?? Document.GetString("SiteTitle");
     var tags = Document.GetList<string>("Tag");
 }
@@ -17,23 +17,26 @@
 
 <body>
 
+  <!-- Site Header -->
+  @RenderSectionOrPartial("Header", "include/_header-of-post")
+
+  <section class="page-header" style="padding-top: 80px; padding-bottom: 40px; background: linear-gradient(0deg,rgba(0,0,0,0.2),rgba(0,0,0,0.0)), url('/assets/img/home-header.jpg') center center repeat;">
+    <h1 class="project-name">@title</h1>
+    @foreach (var tag in tags?.Where(x => x != null))
+    {
+      <a>@tag</a>
+    }
+  </section>
+
+  <section class="main-content">
+    @RenderBody()
+
     <!-- Site Header -->
-    @RenderSectionOrPartial("Header", "_include/_header-of-post")
+    @RenderSectionOrPartial("Footer", "include/_footer")
+  </section>
 
-    <section class="page-header" style="padding-top: 80px; padding-bottom: 40px; background: linear-gradient(0deg,rgba(0,0,0,0.2),rgba(0,0,0,0.0)), url('/assets/img/home-header.jpg') center center repeat;">
-        <h1 class="project-name">@title</h1>
-        @foreach (var tag in tags?.Where(x => x != null))
-        {
-            <a>@tag</a>
-        }
-    </section>
-
-    <section class="main-content">
-        @RenderBody()
-
-        <!-- Site Header -->
-        @RenderSectionOrPartial("Footer", "_include/_footer")
-    </section>
+  <!-- Site Stat -->
+  @RenderSectionOrPartial("Stat", "include/_stat")
 </body>
 
 </html>
