Fix：翻页按钮显示

--- a/input/include/_posts.cshtml
+++ b/input/include/_posts.cshtml
@@ -15,13 +15,13 @@
     <div class="float-sm-left">
       @if (newer != null)
       {
-        <a class="btn btn-primary" href="@Context.GetLink(newer)" role="button"><i class="fas fa-angle-double-left"></i> Newer</a>
+        <a href="@Context.GetLink(newer)" role="button"><i class="fas fa-angle-double-left"></i> Newer</a>
       }
     </div>
     <div class="float-sm-right">
       @if (older != null)
       {
-        <a class="btn btn-primary" href="@Context.GetLink(older)" role="button">Older <i class="fas fa-angle-double-right"></i></a>
+        <a href="@Context.GetLink(older)" role="button">Older <i class="fas fa-angle-double-right"></i></a>
       }
     </div>
     <div class="clearfix"></div>
